REGRESSION (r280568): ASSERTION FAILED: videoFullscreenManager->client() == &_videoFullscreenManagerProxyClient https://bugs.webkit.org/show_bug.cgi?id=228740 rdar://problem/81464301

Reviewed by Jer Noble.

Fix assertion to reflect that the code can be code in two ways.
This will all go away following bug 228761.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController setVideoFullscreenManagerClient:]):


Canonical link: https://commits.webkit.org/240241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280628 268f45cc-cd09-0410-ab3c-d52691b4dbfc